# Design-patterns-in-CPP

./: .gitignore  README.md
Lesson1/Task1/Lesson1-Task1/: Lesson1-Task1.sln
Lesson1/Task1/Lesson1-Task1/Lesson1-Task1/: Lesson1-Task1.vcxproj  Lesson1-Task1.vcxproj.filters  Main.cpp  SqlSelectQuery.cpp  SqlSelectQuery.h
Lesson1/Task2/: CMakeLists.txt
Lesson1/Task2/include/: SqlSelectQuery.h
Lesson1/Task2/src/: Main.cpp  SqlSelectQuery.cpp
Lesson2/Task1/: CMakeLists.txt  decorator.cpp
Lesson2/Task2/: CMakeLists.txt  proxy.cpp
Lesson3/Task1/: CMakeLists.txt  logCommand.hpp  main.cpp
Lesson3/Task2/: CMakeLists.txt
Lesson3/Task2/include/: observed.hpp  observer.hpp
Lesson3/Task2/src/: observed.cpp  observer.cpp
Lesson3/Task3/: CMakeLists.txt
Lesson3/Task3/Type/includes/: type.hpp
Lesson3/Task3/handlers/: CMakeLists.txt
Lesson3/Task3/handlers/includes/: abstractHandler.hpp  errorHandler.hpp  fatalErrorHandler.hpp  handler.hpp  unknownMessageHandler.hpp  warningHandler.hpp
Lesson3/Task3/handlers/src/: abstractHandler.cpp  errorHandler.cpp  fatalErrorHandler.cpp  unknownMessageHandler.cpp  warningHandler.cpp
Lesson3/Task3/includes/: LogMessage.hpp
Lesson3/Task3/src/: LogMessage.cpp  main.cpp
Lesson4/Task1/: listOfViolations.txt
Lesson4/Task2/: CMakeLists.txt  main.cpp
